refactor(song/album): move getSongsByAlbumId from SongCoreService to AlbumService and rename it to getSongs; and add toDto overload with SongProjection parameter in SongDto